--- a/index.html
+++ b/index.html
@@ -1,105 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
         <h1>Poster Shop</h1>
-     <img class="img_ninjahead" src="images/img/ninjahead.svg" alt="ninja head image">
+        <img class="img_ninjahead" src="images/img/ninjahead.svg" alt="ninja head image">
     </header>
     <section class="main1">
         <div class="card1">
             <img src="images/img/char-1.png" alt="" style="width: 100%;">
             <h2><b>Austronaut</b></h2>
-            <p class="card1_para">Marfa artisan pok pok, direct trade subway coloring book shaman intelligentsia meh 
+            <p class="card1_para">Marfa artisan pok pok, direct trade subway coloring book shaman intelligentsia meh
                 kinfolk affogato raw denim direct trade subway tile kombucha.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-2.png" alt="" style="width: 100%;">
             <h2><b>Ninja</b></h2>
-            <p class="card1_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally 
-                flexitarian cloud bread gochujang sustainable. Ramps thundercat squid skateboard 
+            <p class="card1_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally
+                flexitarian cloud bread gochujang sustainable. Ramps thundercat squid skateboard
                 readymade.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-3.png" alt="" style="width: 100%;">
             <h2><b>Nerd</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal , single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal , single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-4.png" alt="" style="width: 100%;">
             <h2><b>Läkare</b></h2>
-            <p class="card1_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally 
-                flexitarian cloud bread gochujang sustainable. Ramps thundercats squid skateboard 
+            <p class="card1_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally
+                flexitarian cloud bread gochujang sustainable. Ramps thundercats squid skateboard
                 readymade.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-5.png" alt="" style="width: 100%;">
             <h2><b>Gitarrknäppare</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-6.png" alt="" style="width: 100%;">
             <h2><b>Snorklare</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-7.png" alt="" style="width: 100%;">
             <h2><b>Clown</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-8.png" alt="" style="width: 100%;">
             <h2><b>Ninja</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card1">
             <img src="images/img/char-9.png" alt="" style="width: 100%;">
             <h2><b>Nerd</b></h2>
-            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card1_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
     </section>
     <section class="main2">
         <div class="card2">
             <img src="images/img/char-10.png" alt="" style="width: 100%;">
             <h2><b>Fotograf</b></h2>
-            <p class="card2_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally 
-                flexitarian cloud bread gochujang sustainable. Ramps thundercats squid skateboard 
+            <p class="card2_para">Disrupt blue bottle kombucha quinoa live-edge ennui literally
+                flexitarian cloud bread gochujang blue bottle sustainable. Ramps thundercats squid skateboard
                 readymade.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
         <div class="card2">
             <img src="images/img/char-9.png" alt="" style="width: 100%;">
             <h2><b>Personlig Tränare</b></h2>
-            <p class="card2_para">Tacos squid retro, activated charcoal next level kitsch 
-                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche 
+            <p class="card2_para">Tacos squid retro, activated charcoal next level kitsch
+                vexillologist ennui. Vice offal iceland humblebrag, single-origin coffee cliche
                 vegan adaptogen jean shorts yr.</p>
-                <button class="btn1">Oh, take my money</button>
+            <button class="btn1">Oh, take my money</button>
         </div>
     </section>
     <section class="footer">
@@ -111,16 +113,17 @@
         </div>
         <div class="address">
             <h2>Address</h2>
-           <p></p>Plinkeplonkvägen</p>
-           <p>888 81 Klonberga</p>
+            <p></p>Plinkeplonkvägen</p>
+            <p>888 81 Klonberga</p>
         </div>
         <div class="social">
             <h2>Social media</h2>
-        <img src="images/img/logo-twitter.svg" alt="">
-        <img src="images/img/logo-facebook.svg" alt="">
-        <img src="images/img/logo-linkedin.svg" alt="">
-        <img src="images/img/logo-instagram.svg" alt="">
+            <img src="images/img/logo-twitter.svg" alt="">
+            <img src="images/img/logo-facebook.svg" alt="">
+            <img src="images/img/logo-linkedin.svg" alt="">
+            <img src="images/img/logo-instagram.svg" alt="">
         </div>
     </section>
 </body>
+
 </html>
